--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   ],
   "builds": [
     {
-      "src": ".",
+      "src": "./src",
       "use": "@vercel/static-build",
       "config": {
         "buildCommand": "pnpm build",
