--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
-    { "src": "/api/(.*)", "dest": "https://1485847.1314528.xyz/api/$1" },
+    { "src": "/api/(.*)", "dest": "http://175.178.213.42/api/$1" },
     { "src": "/(.*)", "dest": "/$1" },
 		{ "handle": "filesystem" },
     { "src": "/(.*)", "status": 404, "dest": "/" }
